fix reset panel btn bug

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -580,7 +580,7 @@
               <div class="box training showh3" id="expS01">
                 <div class="box1">
                   強襲ドロップ
-                  <select class="rare" style="display: none;">
+                  <select class="rare" disabled style="display: none;">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -589,7 +589,7 @@
                     <option value="5">白</option>
                     <option value="6" selected>黒</option>
                   </select>
-                  <select class="sex" style="display: none;">
+                  <select class="sex" disabled style="display: none;">
                     <option value="0" selected>女性</option>
                     <option value="1">男性</option>
                   </select>
@@ -622,7 +622,7 @@
               <div class="box training show" id="expS02">
                 <div class="box1">
                   ｱｲﾄﾞﾙ/戦場アンナ
-                  <select class="rare" style="display: none;">
+                  <select class="rare" disabled style="display: none;">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
                     <option value="2">銀</option>
@@ -631,7 +631,7 @@
                     <option value="5">白</option>
                     <option value="6" selected>黒</option>
                   </select>
-                  <select class="sex" style="display: none;">
+                  <select class="sex" disabled style="display: none;">
                     <option value="0" selected>女性</option>
                     <option value="1">男性</option>
                   </select>
