exp calc round down fix

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -587,7 +587,7 @@
                 </div>
               </div>
 
-              <div class="box training showh3" id="expS01">
+              <div class="box training showh3" id="expS01" title="750">
                 <div class="box1">
                   強襲ドロップ
                   <select class="rare" disabled style="display: none;">
@@ -621,7 +621,7 @@
                   </div>
 
                 </div>
-                <div class="box2" title="750">750</div>
+                <div class="box2">750</div>
                 <div class="box3">
                   <input type="button" value="－">
                   <input class="count" type="number" value="0" min="0" max="99">
@@ -629,7 +629,7 @@
                 </div>
               </div>
 
-              <div class="box training show" id="expS02">
+              <div class="box training show" id="expS02" title="2000">
                 <div class="box1">
                   ｱｲﾄﾞﾙ/戦場アンナ
                   <select class="rare" disabled style="display: none;">
@@ -648,7 +648,7 @@
 
                   <div class="boxnote">
                     Lv
-                    <input class="lv" type="number" value="1" min="1" max="30" onchange="changePanels();">
+                    <input class="lv" type="number" value="1" min="1" max="30" title="30" onchange="changePanels();">
                     <select class="cc" disabled onchange="changePanels();" style="color: #316ca4;">
                       <option value="0">未CCユニット</option>
                       <option value="1" selected>CC済/CCのない</option>
@@ -658,7 +658,7 @@
                   </div>
 
                 </div>
-                <div class="box2" title="2000">2000</div>
+                <div class="box2">2000</div>
                 <div class="box3">
                   <input type="button" value="－">
                   <input class="count" type="number" value="0" min="0" max="99">
