expcalc add drop unit

--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -589,7 +589,7 @@
 
               <div class="box training showh3" id="expS01" title="750">
                 <div class="box1">
-                  強襲ドロップ
+                  イベントドロップ
                   <select class="rare" disabled style="display: none;">
                     <option value="0">鉄</option>
                     <option value="1">銅</option>
@@ -617,7 +617,8 @@
                   <div style="float: right; margin: 3px 7px 0px 0px;">
                     翠花の領主メアリ<br>
                     鬼刃忍タチバナ<br>
-                    鋼の重装砲兵ヴァネッサ
+                    鋼の重装砲兵ヴァネッサ<br>
+                    奇譚の幻術士タリエ
                   </div>
 
                 </div>
