--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -587,7 +587,7 @@
                 </div>
               </div>
 
-              <div class="box training showh3" id="expS01" title="750">
+              <div class="box training showh2" id="expS01" title="750">
                 <div class="box1">
                   イベントドロップ
                   <select class="rare" disabled style="display: none;">
@@ -615,10 +615,8 @@
                     <input class="cbonus" type="checkbox" title="同クラス加算" onchange="changePanels();">
                   </div>
                   <div style="float: right; margin: 3px 7px 0px 0px;">
-                    翠花の領主メアリ<br>
-                    鬼刃忍タチバナ<br>
-                    鋼の重装砲兵ヴァネッサ<br>
-                    奇譚の幻術士タリエ
+                    翠花の領主メアリ　　　　　鬼刃忍タチバナ<br>
+                    鋼の重装砲兵ヴァネッサ　　奇譚の幻術士タリエ
                   </div>
 
                 </div>
@@ -679,16 +677,15 @@
               計画内容：
               <div id="inputInformation" style="font-weight: bold;">-</div>
             </div>
-            <!-- 
-            <div class="box" style="background-color: #244664; padding: 5px; margin-top: 20px;">
-              総合経験値：
-              <div id="addEXP" style="font-size: 20px; font-weight: bold;">-</div>
-            </div>
-            -->
 
             <div class="box" style="background-color: #244664; padding: 5px; margin-top: 20px;">
               目標レベルまで：
               <div id="remainingEXP" style="font-size: 20px; font-weight: bold;">-</div>
+            </div>
+
+            <div class="box" style="background-color: #244664; padding: 5px; margin-top: 20px;">
+              上昇経験値：
+              <div id="addEXP" style="font-size: 10px;">-</div>
             </div>
 
           </div>
