checker logic upgrade

--- a/html/AigisChecker.html
+++ b/html/AigisChecker.html
@@ -98,6 +98,7 @@
         <input type="button" onclick="sortByAssign();     " value="所属">
         <input type="button" onclick="sortByGenus();      " value="節分">
         <input type="button" onclick="sortByYearGacha();  " value="年度ガチャ黒">
+        <input type="button" onclick="sortByTicket();     " value="ブラックチケット">
       </div>
 
       <div class="card">
