--- a/html/AigisEXP.html
+++ b/html/AigisEXP.html
@@ -311,6 +311,16 @@
                 </div>
               </div>
 
+              <div class="box training show" id="expEmperor51">
+                <div class="box1">白の皇帝(Lv51)×8</div>
+                <div class="box2" title="24000">24000</div>
+                <div class="box3">
+                  <input type="button" value="－">
+                  <input class="count" type="number" value="0" min="0" max="99">
+                  <input type="button" value="＋">
+                </div>
+              </div>
+
             </div>
 
 
